Upgrade of tests requirements

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,21 @@
+[pep8]
+max-line-length=100
+exclude=venv,dist,build
+ignore=E402
+
+[nosetests]
+with-coverage = 1
+with-xunit = 1
+cover-package = pypuppetdb
+
+[flake8]
+exclude=venv
+
 [tool:pytest]
 addopts = --cov=pypuppetdb --cov-report=term-missing
-norecursedirs = docs .tox
-minversion = 2.3
-markers =
-    unit: mark test as a unit test. Runs without PuppetDB.
-    integration: mark test as an integration test. Needs a live PuppetDB with testdata loaded.
+norecursedirs = docs .tox venv .eggs lib
+pep8ignore = E402
+python_files = tests/*.py
 
 [bdist_wheel]
 universal = 1
