--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,10 @@
 [tox]
-envlist = py27, py35, py36, py37, pypy, pep8
+envlist = py{36,37,38}
 
 [testenv]
-commands = py.test -m 'unit'
-deps =
-    -r{toxinidir}/requirements.txt
-
-[testenv:pep8]
-basepython = python2.7
-commands = py.test --pep8 -m 'not (unit or integration)'
+deps=
+    -rrequirements-test.txt
+    bandit
+commands=
+    py.test --cov=pypuppetdb --pep8 -v
+    py{36,37,38}: bandit -r pypuppetdb
