--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -1,9 +1,11 @@
 -r requirements.txt
 coveralls
 bandit
-coverage==4.0
-mock==1.0.1
-pytest==3.0.1
-pytest-cov==2.2.1
-pytest-pep8==1.0.5
+coverage==4.5.4
+pep8==1.7.1
+mock==3.0.5
+pytest==5.2.2
+pytest-cov==2.8.1
+pytest-pep8==1.0.6
+pytest-mock==1.11.2
 cov-core==1.15.0
