--- a/setup.cfg
+++ b/setup.cfg
@@ -14,6 +14,7 @@ exclude=venv
 [tool:pytest]
 addopts = --cov=pypuppetdb --cov-report=term-missing
 norecursedirs = docs .tox venv .eggs lib
+pep8ignore = E402
 python_files = tests/*.py
 
 [mypy]
@@ -22,7 +23,7 @@ ignore_missing_imports=True
 ignore_errors=False
 pretty=True
 
-[mypy-setup,puppetboard.docker_settings]
+[mypy-setup]
 ignore_errors = True
 
 [bdist_wheel]
