--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ __pycache__
 dist
 build
 eggs
+.eggs
 parts
 bin
 var
@@ -30,6 +31,7 @@ pip-log.txt
 .tox
 nosetests.xml
 htmlcov
+.mypy_cache
 
 # Translations
 *.mo
@@ -48,3 +50,6 @@ docs/_build
 
 # OS X
 .DS_*
+
+# Jetbrains
+.idea
